"Abjcuntion" and "injunction" were not defined in S09, so I replaced them with the more friendly "one" and "none".
git-svn-id: http://svn.pugscode.org/pugs@23675 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S09.pod
+++ b/doc/trunk/design/syn/S09.pod
@@ -559,11 +559,11 @@ chosen to be "autothreaded" is:
 
 =item *
 
-the left-most conjunction or injunction (if any), or else
+the left-most I<all> or I<none> junction (if any), or else
 
 =item *
 
-the left-most abjunction or disjunction
+the left-most I<one> or I<any> junction
 
 =back
 
